# osquery

./: .gitmodules  CMakeLists.txt  azure-pipelines.yml
.github/workflows/: build.yml  hosted_runners.yml
cmake/: flags.cmake  options.cmake  toolchain.cmake  utilities.cmake
docs/wiki/deployment/: yara.md
docs/wiki/development/: building.md
docs/wiki/installation/: cli-flags.md
libraries/cmake/facebook/thrift/: CMakeLists.txt
libraries/cmake/source/boost/: CMakeLists.txt
libraries/cmake/source/dbus/: CMakeLists.txt
libraries/cmake/source/dbus/patches/src/: dbus_cmakelists.patch
libraries/cmake/source/expat/: CMakeLists.txt
libraries/cmake/source/glog/: CMakeLists.txt  README.md
libraries/cmake/source/grpc/: CMakeLists.txt
libraries/cmake/source/grpc/cmake/: protobuf.cmake
libraries/cmake/source/grpc/patches/: cmakelists.patch
libraries/cmake/source/grpc/patches/src/: cmakelists.patch
libraries/cmake/source/libmagic/: README.md
libraries/cmake/source/modules/: Findboost.cmake  Finddbus.cmake  Findexpat.cmake  Findgrpc.cmake  Findsystemd.cmake
libraries/cmake/source/rocksdb/: CMakeLists.txt
libraries/cmake/source/systemd/: CMakeLists.txt
libraries/cmake/source/thrift/: CMakeLists.txt
osquery/: CMakeLists.txt
osquery/config/tests/: BUCK  CMakeLists.txt
osquery/core/: CMakeLists.txt  init.cpp  system.cpp
osquery/core/tests/windows/: wmi_tests.cpp
osquery/core/windows/: wmi.cpp  wmi.h
osquery/events/: CMakeLists.txt
osquery/events/async_client/: client_interface.h  container_client.cpp  container_client.h
osquery/events/client/: base_request.h  client_interface.h  container_client.cpp  container_client.h
osquery/events/containerd/: base_request.h  client_interface.h  containerd_client.cpp  containerd_client.h
osquery/events/darwin/: endpointsecurity.h  endpointsecurity_socketevents.cpp  es_utils.cpp
osquery/events/linux/: auditdnetlink.cpp  containereventpublisher.cpp  containereventpublisher.h  lxdeventpublisher.cpp  lxdeventpublisher.h
osquery/events/proto/: events.grpc.pb.cc  events.grpc.pb.h  events.pb.cc  events.pb.h  events.proto  fieldpath.grpc.pb.cc  fieldpath.grpc.pb.h  fieldpath.pb.cc  fieldpath.pb.h
osquery/examples/: CMakeLists.txt  example_extension.cpp
osquery/examples/extension_group_example/: CMakeLists.txt
osquery/examples/extension_group_example/src/: complex_example.cpp  complex_example.h  example.cpp
osquery/experimental/experiments/: CMakeLists.txt
osquery/experimental/experiments/bpf_network_events/: CMakeLists.txt
osquery/experimental/experiments/bpf_network_events/include/osquery/experiments/: bpf_network_events.h
osquery/experimental/experiments/bpf_network_events/libraries/: CMakeLists.txt
osquery/experimental/experiments/bpf_network_events/libraries/networkevents/: CMakeLists.txt
osquery/experimental/experiments/bpf_network_events/src/: bpf_network_events.cpp  bpfnetworkeventstable.cpp  bpfnetworkeventstable.h  networkeventsservice.cpp  networkeventsservice.h
osquery/experimental/experiments/loader/: CMakeLists.txt
osquery/experimental/experiments/loader/src/: loader.cpp
osquery/filesystem/: filesystem.cpp
osquery/filesystem/tests/: filesystem.cpp
osquery/filesystem/windows/: fileops.cpp
osquery/killswitch/tests/: BUCK  CMakeLists.txt
osquery/process/windows/: process_ops.cpp  process_ops.h
osquery/remote/: http_client.cpp
osquery/remote/enroll/: BUCK  CMakeLists.txt
osquery/remote/transports/: BUCK  CMakeLists.txt  tls.cpp
osquery/tables/events/: CMakeLists.txt
osquery/tables/events/darwin/: es_process_socket_events.cpp
osquery/tables/events/linux/: container_events.cpp  containerd_events.cpp  lxd_events.cpp  lxd_events.h
osquery/tables/networking/: curl.cpp
osquery/tables/networking/windows/: arp_cache.cpp
osquery/tables/system/: BUCK  CMakeLists.txt  python_packages.cpp
osquery/tables/system/darwin/: os_version.cpp  secureboot.cpp  signature.mm  system_extensions.mm  system_info.cpp
osquery/tables/system/linux/: rpm_packages.cpp  startup_items.cpp  systemd_units.cpp
osquery/tables/system/tests/: CMakeLists.txt
osquery/tables/system/tests/darwin/: signature_tests.mm  system_extensions_test.cpp  unsigned_test.cpp
osquery/tables/system/windows/: bitlocker_info.cpp  certificates.cpp  chassis_info.cpp  cpu_info.cpp  disk_info.cpp  domain_groups.cpp  domain_user_groups.cpp  domain_user_groups.h  domain_users.cpp  drivers.cpp  group_flat_members.cpp  group_members.cpp  groups.cpp  groups.h  logged_in_users.cpp  ntdomains.cpp  office_macros.cpp  patches.cpp  shared_resources.cpp  system_info.cpp  user_groups.cpp  user_groups.h  users.cpp  users.h  video_info.cpp  wmi_bios_info.cpp
osquery/tables/yara/: yara.cpp
osquery/utils/aws/: aws_util.cpp
osquery/utils/info/firmware/: windows.cpp
osquery/utils/system/windows/: system.h
plugins/killswitch/tests/: BUCK  CMakeLists.txt
plugins/logger/: buffered.cpp  buffered.h
specs/: BUCK  CMakeLists.txt  secureboot.table  user_groups.table
specs/darwin/: es_process_file_events.table  es_process_socket_events.table  system_extensions.table
specs/linux/: containerd_container_events.table  containerd_task_events.table  lxd_lifecycle_events.table  lxd_logging_events.table  lxd_operation_events.table  rpm_packages.table  systemd_units.table
specs/posix/: container_events.table
specs/windows/: domain_groups.table  domain_user_groups.table  domain_users.table  group_flat_members.table  group_members.table  office_macros.table
specs/yara/: yara.table
tests/integration/tables/: CMakeLists.txt  npm_packages.cpp  preferences.cpp  rpm_packages.cpp  secureboot.cpp  startup_items.cpp  system_extensions.cpp  systemd_units.cpp
tools/ci/: osquery-ubuntu18.04-toolchain.dockerfile
tools/ci/scripts/: package_tests.sh
tools/codegen/: CMakeLists.txt
tools/formatting/: git-clang-format.py
tools/tests/: CMakeLists.txt  test_base.py  test_extensions.py  test_release.py
